@@ -71,6 +71,7 @@ New features:
 - When storageAuto is triggered, it will write a message saying why.
 - Display your PvP rank when you're in a PvP zone.
 - $ai_v{temp}{pvp} is set to 1 in PVP maps, 2 in GVG.
+- Female characters are now supported on inRO.
 
 New commands:
 - storage log
